# Python-Painting-Vault

./: .envrc  .gitignore  README.md  ai_index.json  main.py  pyproject.toml
Bipartite Chord Diagram : Circular Flow Chart/: Whatis.md
Bipartite Chord Diagram : Circular Flow Chart/Python/: data.csv  main.py
Circular Clustered Heatmap : Radial Clustered Heatmap/: Whatis.md
Circular Clustered Heatmap : Radial Clustered Heatmap/Python/: data.csv  main.py
Circular Dendrogram : Radial Dendrogram with Category Sectors/: Whatis.md
Clustered Heatmap : Hierarchically Clustered Heatmap/: Whatis.md
Combined Grouped Heatmap and Differential Bubble Chart/: Whatis.md
Combined Horizontal Stacked Bar and Conditional Dumbbell Plot/: Whatis.md
Compact Dual-Panel Grouped Bar Chart/: Whatis.md
Compact Dual-Panel Grouped Bar Chart/Python/: data.csv  (+1 more)
Customized Bipartite Undirected Chord Diagram : Relational Chord Chart with Custom Legend/: Whatis.md
Directed Chord-Sankey Composite Plot : Serial Flow Composite Chart/: Whatis.md
Geospatial Raster Map : Projected Map with Custom NaN Colormap/: Whatis.md
Grouped Correlation Heatmap with Separation Lines : Block-Diagonal Correlation Matrix/: Whatis.md
Inset Composite Chart —— Line Plot with Horizontal Bar-Scatter/: Whatis.md
Multi-layer Aligned Sankey Diagram : Complex Flow Alluvial Diagram/: Whatis.md
Rotated Triangular Clustered Heatmap : Diagonal Correlation Heatmap/: Whatis.md
Split Violin Plot : Asymmetric Half-Violin Plot/: Whatis.md
Truncated Bar Chart with Jittered Scatter and Error Bars/: Whatis.md
(+25 files in other folders)
