[project]
name = "python-painting-vault-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pycirclize>=1.10.1",
    "pyecharts>=2.1.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
