[project]
name = "python-painting-vault-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pycirclize>=1.10.1",
    "pyecharts>=2.1.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tifffile>=2026.6.1",
]

[tool.uv.workspace]
members = []
